Fix article content becoming visible where it should not

--- a/app/javascript/styles/mastodon/components.scss
+++ b/app/javascript/styles/mastodon/components.scss
@@ -996,8 +996,11 @@
   }
 
   .article-type {
-    display: inline-block;
     margin-top: 10px;
+  }
+
+  .article-type--visible {
+    display: inline-block;
   }
 
   .article-type img {
